Started HomePage + Created LandingSection component

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -17,13 +17,20 @@ p {
   font-size: 20px;
 }
 
+.font1 {
+  color: aliceblue;
+}
+
+.font2 {
+  color: #768397;
+}
+
 button {
   background-color: transparent;
   border: 2px solid steelblue;
   color: steelblue;
   font-size: 1rem;
   font-family: inherit;
-  max-width: 100px;
   padding: 0.5rem 0.5rem;
 }
 
