--- a/frontend/src/components/HomeComponents/LandingSection/LandingSection.css
+++ b/frontend/src/components/HomeComponents/LandingSection/LandingSection.css
@@ -1,6 +1,6 @@
 .section-container {
     background-size: cover;
-    background-image: url("../../Images/HomeBackground.jpg");
+    background-image: url("../../../Images/HomeBackground.jpg");
     height: 100vh;
 }
 
