--- a/frontend/src/components/HomeComponents/ImageBar/ImageBar.css
+++ b/frontend/src/components/HomeComponents/ImageBar/ImageBar.css
@@ -3,16 +3,13 @@
     flex-wrap: nowrap;
     flex-direction: row;
     width: 100%;
-    height: 45vh;
 }
 
 .image-container {
     width:20%;
-    height: 100%;
 }
 
 .image-container img {
     width: 100%;
-    height: 100%;
-    object-fit: contain;
+    object-fit: cover;
 }
