--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,6 +12,10 @@ body {
   background-color: #768397;
 }
 
+.border-top-darkgray {
+  border-top: 2px solid#3d4757 ;
+}
+
 .divider {
   background-color: #3d4757;
   height: 4vh;
@@ -37,7 +41,7 @@ p {
 button {
   background-color: transparent;
   border: 2px solid steelblue;
-  color: steelblue;
+  color: black;
   font-size: 1rem;
   font-family: inherit;
   padding: 0.5rem 0.5rem;
