--- a/frontend/src/components/HomeComponents/Product/Product.css
+++ b/frontend/src/components/HomeComponents/Product/Product.css
@@ -1,9 +1,44 @@
 .product-info {
     display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    background-color: rgb(253, 228, 228);
+    flex-wrap: wrap;
+    flex-direction: column;
+    background-color: rgb(52, 71, 93);
     width: 100%;
-    height: 100%;
+    padding:3%;
     justify-content: center;
+    align-content: center;
+    border: 1px solid black;
+}
+
+
+.image-container-card {
+    margin: auto;
+    width: 60%;
+    
+}
+
+
+.image-container-card img {
+    width: 100%;
+    object-fit: cover;
+}
+
+.product-name {
+    text-align: center;
+    font-size: 3.5vh;
+    margin-bottom: 1.75%;
+}
+
+.details {
+    border-top: 2px solid ;
+    margin-top: 5%;
+}
+
+.description{
+    padding-top: 4%;
+}
+
+.price {
+    margin-top: 4%;
+    text-align: end;
 }
