--- a/frontend/src/components/OrderComponents/OrderForm/OrderForm.css
+++ b/frontend/src/components/OrderComponents/OrderForm/OrderForm.css
@@ -10,5 +10,5 @@
     display: flex;
     flex-wrap: nowrap;
     width: 100%;
-    background-color: aqua;
+    background-color: rgb(125, 139, 139);
 }
