--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,6 +16,11 @@ body {
   border-top: 2px solid#3d4757 ;
 }
 
+.container-no-wrap {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .divider {
   background-color: #3d4757;
   height: 4vh;
