--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -81,3 +81,24 @@ button:hover {
   padding: 3px 7px;
   font-size: 17px;
 }
+
+
+form {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+input {
+  border: none;
+  outline: none;
+}
+
+textarea {
+  border: none;
+  outline: none;
+}
+
+.button-row {
+  margin-top: 2%;
+}
