--- a/frontend/src/components/ManageComponents/ManagerComponents/Manager/Manager.css
+++ b/frontend/src/components/ManageComponents/ManagerComponents/Manager/Manager.css
@@ -1,10 +1,15 @@
 .manager-container {
     margin: auto;
-    width: 75vw;
-   
+    width: 65vw;
+    min-height: 35vh;
+    max-height: 35vh;
 }
 
 .manager {
-    background-color: azure;
-    height: 35vh;
+    background-color: rgb(176, 227, 227);
+    min-height: 100%;
+    max-height: 100%;
+    display: flex;
+    flex-wrap: nowrap;
 }
+
