--- a/frontend/src/components/ManageComponents/ManagerComponents/OrderManager/OrderManager.css
+++ b/frontend/src/components/ManageComponents/ManagerComponents/OrderManager/OrderManager.css
@@ -1,5 +1,5 @@
 .items-container {
-    width: 20%;
+    width: 25%;
     background-color: gray;
 
 }
@@ -7,10 +7,29 @@
 .editor {
     width: 60%;
     background-color: lightblue;
-
+    height: 100%;
 }
 
 .order-container {
-    width: 20%;
-    background-color: gray;
+    width: 15%;
+    background-color: lightblue;
+    display: flex;
+    
+    align-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    text-align: center;
+    
+}
+
+.order-detail {
+    font-size: larger;
+    padding-bottom: 1%;
+} 
+
+.order {
+    margin-top: 15%;
+    background-color: #3d4757;
+    color: #ffffff;
+    padding: 10%;
 }
