--- a/frontend/src/components/HomeComponents/LandingSection/LandingSection.css
+++ b/frontend/src/components/HomeComponents/LandingSection/LandingSection.css
@@ -8,6 +8,8 @@
     border: none;
     font-size: x-large;
     color: aliceblue;
+    font-family: 'Lobster Two';
+    font-size: 3.5vh;
 }
 
 .nav-bar {
@@ -53,4 +55,6 @@
     justify-content: center;
     align-items: flex-end;
     font-size: 3vh;
+    color: #C37F90 ;
 }
+
