--- a/frontend/src/components/HomeComponents/Menu/Menu.css
+++ b/frontend/src/components/HomeComponents/Menu/Menu.css
@@ -6,7 +6,7 @@
 
 .column{
     padding: 2%;
-    width: 25vw;
+    width: 20vw;
 }
 
 .option-list{
@@ -20,7 +20,14 @@
 
 
 .button-row {
-    
     display: flex;
     justify-content: flex-end;
+}
+
+.button-row button {
+    background-color: steelblue ;
+    color: rgb(49, 49, 49);
+
+    font-size: .75vw;
+    
 }
