--- a/frontend/src/components/HomeComponents/Product/Product.css
+++ b/frontend/src/components/HomeComponents/Product/Product.css
@@ -2,43 +2,58 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    background-color: rgb(52, 71, 93);
+    background-color: #2b3547;
     width: 100%;
-    padding:3%;
+    padding:8%;
     justify-content: center;
     align-content: center;
-    border: 1px solid black;
+    border: 5px solid #818181;
+    max-height: 67vh;
+    /* box-shadow: 0px 0px 10px 10px rgba(58, 70, 92); */
 }
 
 
 .image-container-card {
     margin: auto;
-    width: 60%;
+    max-width: 300px;
+    max-height: 300px;
     
+    /* min-height: 350px; */
 }
 
 
 .image-container-card img {
     width: 100%;
-    object-fit: cover;
+    object-fit: fill;
+    /* border: solid 5px #354157; */
 }
 
 .product-name {
     text-align: center;
-    font-size: 3.5vh;
-    margin-bottom: 1.75%;
+    font-size: 3vh;
+    margin-bottom: 5%;
+    /* color: steelblue; */
 }
 
 .details {
-    border-top: 2px solid ;
+    border-top: 2px solid #C37F90 ;
     margin-top: 5%;
+    min-height: 40px;
+    font-size: 1.4vh;
+    /* max-height: 125px; */
 }
 
 .description{
-    padding-top: 4%;
+    padding: 4%;
+    font-size: larger;
+    min-height: 175px;
 }
 
 .price {
-    margin-top: 4%;
+    font-size: 1.5vh;
+    background-color:#3C4F6D;
+    /* margin-top: 15%; */
     text-align: end;
+    padding: 5%;
+    
 }
