--- a/frontend/src/components/HomeComponents/ProductSection/ProductSection.css
+++ b/frontend/src/components/HomeComponents/ProductSection/ProductSection.css
@@ -1,30 +1,69 @@
 .product-section-container {
     height: 100vh;  
+    color: #C2C5CA;
+    display: flex;
+    flex-wrap: nowrap;   
+}
+
+.s-section {
+    width: 10%;
+    background-color: #354157;
+    height: 100%;
 }
 
 .products-container {
     display: flex;
     flex-wrap: nowrap;
-    justify-content: space-around;
-    margin-top: 10vh;
-    height: 70%;
+    justify-content: center;
+    margin-top: 11vh;
+    /* height: 70%; */
+    gap: 5%;
+}
+
+.m-section {
+    width: 100%;
 }
 
 .product {
-    width: 25%;
+    width: 22%;
     height: 100%;
 }
 
 .section-name {
-    width: 75%;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    width: 70%;
     margin: auto;
     font-size: 5vh;
     text-align: center;
-    border-bottom: 4px solid #3d4757;
-    margin-bottom: 2%;
+    border-bottom: 4px solid #C37F90;
+    margin-top: 4%;
+    padding-bottom: 1%;
 }
 
 .buttons-container {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
+    padding-right: 5%;
+    width: 35%;
+    gap: 2%
+    
 }
+
+.buttons-container button {
+    font-size: 1vw;
+    border: 1px solid #3C4F6D;
+    color:#C2C5CA ;
+    background-color: #3C4F6D;
+}
+
+.ptitle {
+    padding-left: 5%;
+}
+
+.buttons-container button:hover {
+    background-color: steelblue;
+    
+}
+
