--- a/frontend/src/components/Util/Modal/Modal.css
+++ b/frontend/src/components/Util/Modal/Modal.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(0,0,0,.45);
+    background-color: rgba(0,0,0,.55);
     z-index: 100;
     display: flex;
     justify-content: center;
@@ -13,26 +13,25 @@
 
 
 .modal {
-    background-color: rgb(207, 209, 211);
-    border-radius: .75vh;
+    background-color: #354157;
+    /* border-radius: .75vh; */
     font-weight: bold;
+    /* border: 3px solid #818181; */
 }
 
 .modal-header{
-    text-shadow: 2px 0px 5px  rgb(101, 101, 101);
+    /* text-shadow: 2px 0px 5px  rgb(101, 101, 101); */
     font-size: 2vh;
     padding-left:2vh;
     padding-right:2vh;
     padding-top: 3px;
-    color:aliceblue;
-    border-top-left-radius: .75vh;
-    border-top-right-radius: .75vh;
-    border-bottom: solid aliceblue;
+    color:#C2C5CA;
+    border-bottom: solid #818181;
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap :5em;
-    background-color: rgb(54, 79, 54);
+    background-color: #2b3547;
     box-shadow:0px .5vh .75vh .2vh rgba(0,0,0,.2);
 }
 
@@ -42,7 +41,7 @@
 }
 
 .modal-body {
-    padding: 3em;
+    padding: 1em;
     padding-top: 2em;
 }
 
