--- a/frontend/src/components/OrderComponents/ProductList/ProductList.css
+++ b/frontend/src/components/OrderComponents/ProductList/ProductList.css
@@ -5,18 +5,23 @@
     flex-direction: column;
 }
 
-
 .product-row {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin-bottom: 3%;
 }
 
 .product-heading {
-    border-bottom: 1px solid grey;
-    width: 60%;
+    border-bottom: 2px solid #8AAB8E;
+    width: 100%;
     margin: auto;
     text-align: center;
+    margin-bottom: 5%;
+    color: aliceblue;
+    font-size: 3vh;
+    background-color: #3C4F6D;   
 }
 
 .product-row button {
