--- a/frontend/src/pages/OrderPage/OrderPage.css
+++ b/frontend/src/pages/OrderPage/OrderPage.css
@@ -5,3 +5,9 @@
 .item-list-container {
     width: 20%
 }
+
+.b {
+    height: 90vh;
+    background-image: url("../../Images/HomeBackground.jpg");
+    background: fill;
+}
