--- a/frontend/src/components/OrderComponents/ItemsList/itemList.css
+++ b/frontend/src/components/OrderComponents/ItemsList/itemList.css
@@ -1,23 +1,68 @@
 .item-list {
-   background-color: rgb(255, 255, 255);
+    background-color: #2b3547;
     width: 100%;
-    min-height: 20vh;
+    min-height: 53vh;
+    max-height: 53vh;
     text-align: center;
+    margin-top: 20%;
+    border: 6px solid #818181;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
 
 .heading {
     padding: .2vw;
     font-size: 1.2vw;
+    height: 5vh;
+    background-color:#3C4F6D ;
+    color: aliceblue;
 }
 
+.column-names {
+    border-bottom: 2px solid #C37F90;
+}
+
+.data2 {
+    min-height: 35vh;
+    max-height: 35vh;
+    overflow-y: auto;
+}
 .styled-table button {
     width: 100%;
 }
 
+.t-row2 {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    width: 100%;
+    padding: 2%;
+    align-items: center;
+    background-color: #2b3547;
+    color: aliceblue;
+}
 
-.styled-table {
+.n { 
+    width: 10%;
+}
+.i{
+    width:60%
+}
+
+.p {
+    width: 20%;
+}
+
+.b2 {
+    width: 60%;
+}
+
+
+/* .styled-table {
     height: 80%;
-    max-height: 50vh;
+    max-height: 40vh;
+    min-height: 40vh;
     width: 100%;
     border-collapse: collapse;
     font-size: 1vw;
@@ -26,9 +71,9 @@
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
     overflow-y:scroll;
     display:block;
-}
+} */
 
-.styled-table thead tr {
+/* .styled-table thead tr {
     background-color: #3d4757;
     color: #ffffff;
     text-align: left;
@@ -50,7 +95,7 @@
 
 .styled-table tbody tr:last-of-type {
     border-bottom: 2px solid #000000;
-}
+} */
 
 
 .total {
@@ -59,7 +104,7 @@
     padding-top: 5%;
     padding-bottom: 5%;
     font-size: 1vw;
-    background-color: #3d4757;
+    background-color: #2b3547;
     color: #ffffff;
     
 }
@@ -67,4 +112,9 @@
 .table-title {
   margin: auto;
   background-color: black;
+}
+
+.note {
+    margin-top: 45%;
+    color: aliceblue;
 }
