--- a/frontend/src/components/OrderComponents/OrderForm/OrderForm.css
+++ b/frontend/src/components/OrderComponents/OrderForm/OrderForm.css
@@ -1,10 +1,10 @@
 .form-container{
-    width: 64vw;
+    width: 66vw;
     background-color: #2b3547;
     /* border-radius: 10px; */
     padding: 2%;
-    margin: 4%;
-    margin-bottom: 30%;
+    margin: 3%;
+    height: 60vh;
     border: 6px solid #818181;
 }
 
@@ -94,5 +94,6 @@
     width: 90%;
     margin: auto;
     color: aliceblue;
+    font-size: .75w;
 }
 
