--- a/frontend/src/components/OrderComponents/ProductList/ProductList.css
+++ b/frontend/src/components/OrderComponents/ProductList/ProductList.css
@@ -11,6 +11,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 3%;
+    font-size: .75vw;
 }
 
 .product-heading {
