--- a/frontend/src/pages/OrderPage/OrderPage.css
+++ b/frontend/src/pages/OrderPage/OrderPage.css
@@ -7,6 +7,8 @@
 }
 
 .b {
+    display: flex;
+    flex-wrap: nowrap;
     height: 90vh;
     background-image: url("../../Images/HomeBackground.jpg");
     background: fill;
