--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -2,6 +2,7 @@ ul {
   display: flex;
   justify-content: space-between;
   list-style-type: none;
+  align-items: center;
 }
 
 li {
@@ -18,10 +19,11 @@ li {
 }
 
 .navBar button {
-  background: transparent;
-  border: 2px solid white;
+  background: #2b3547;
+  /* border: 1px solid #C37F90; */
   color: white;
   padding: 0.4rem 0.5rem;
+  /* margin-right: 5%; */
 }
 
 .navBar button:hover {
