--- a/frontend/src/components/OrderComponents/OrderForm/OrderForm.css
+++ b/frontend/src/components/OrderComponents/OrderForm/OrderForm.css
@@ -97,3 +97,28 @@
     font-size: .75w;
 }
 
+.message {
+    color:aliceblue;
+    width: 20vw;
+    text-align: center;
+    font-size: 1vw;
+    margin-bottom: 5%; 
+}
+
+.message-row {
+    text-align: end;
+}
+
+.login-message {
+    margin: auto;
+    width: 50vw;
+    margin-top: 25vh;
+    color: aliceblue;
+    font-size: 3vh;
+    border: 4px solid #818181;
+    cursor: pointer;
+}
+
+.login-message:hover {
+    color:#C37F90;
+}
