--- a/frontend/src/pages/OrderPage/OrderPage.css
+++ b/frontend/src/pages/OrderPage/OrderPage.css
@@ -3,7 +3,7 @@
 }
 
 .item-list-container {
-    width: 20%
+    width: 20%;
 }
 
 .b {
@@ -12,4 +12,8 @@
     height: 90vh;
     background-image: url("../../Images/HomeBackground.jpg");
     background: fill;
+}
+
+.spacer {
+    height: 10%;
 }
