Manage Page Styled

--- a/frontend/src/components/ManageComponents/CalendarComponents/WorkCalendar/WorkCalendar.css
+++ b/frontend/src/components/ManageComponents/CalendarComponents/WorkCalendar/WorkCalendar.css
@@ -1,12 +1,13 @@
 .calendar {
     /* margin: auto; */
     width: 45vw;
-    height: 55vh;
+    height: 59vh;
     margin-bottom: 1%;
     /* border: 3px solid gray; */
     padding: 2%;
     background-color: #354157;
     color: aliceblue;
+    margin-top: 5vh;
 }
 
 .fc-day{
@@ -16,11 +17,21 @@
     border: 1px solid #2b3547!important;
   
 } 
+
+.fc-event{
+    cursor: pointer!important;
+}
+
+.fc-event:hover {
+    background-color: steelblue!important;
+}
 .fc-day-today {
     background: #C37F90!important;
     /* border: none !important; */
   
 } 
+
+
 
 .fc-button {
     background-color: #C37F90!important;
