--- a/frontend/src/components/ManageComponents/ManagerComponents/OrderManager/OrderManager.css
+++ b/frontend/src/components/ManageComponents/ManagerComponents/OrderManager/OrderManager.css
@@ -4,15 +4,16 @@
 
 }
 
+
 .editor {
     width: 60%;
-    background-color: lightblue;
+    /* background-color: lightblue; */
     height: 100%;
 }
 
 .order-container {
     width: 15%;
-    background-color: lightblue;
+    /* background-color: lightblue; */
     display: flex;
     
     align-content: center;
@@ -22,14 +23,46 @@
     
 }
 
+.ulp {
+    border-bottom: 2px solid #C37F90 ;
+    margin-bottom: 10%;
+}
+
 .order-detail {
     font-size: larger;
-    padding-bottom: 1%;
+    padding-bottom: 9%;
 } 
 
 .order {
     margin-top: 15%;
-    background-color: #3d4757;
+    background-color: #354157;
     color: #ffffff;
     padding: 10%;
+}
+
+.items-container .item-list {
+    border: none;
+    background-color: #3C4F6D;
+}
+
+.items-container .heading {
+    background-color: #354157;
+}
+
+.items-container .date2 {
+    background-color: #3C4F6D;
+}
+.items-container .t-row2 {
+    background-color: #3C4F6D;
+}
+.items-container .total {
+    background-color: #3C4F6D;
+}
+
+.select-message {
+    background-color:#3C4F6D;
+    text-align: center;
+    margin-top: 25%;
+    color: aliceblue;
+    font-size: larger;
 }
