--- a/frontend/src/components/ManageComponents/ManagerComponents/OrderManager/Editor/Editor.css
+++ b/frontend/src/components/ManageComponents/ManagerComponents/OrderManager/Editor/Editor.css
@@ -3,10 +3,18 @@
     font-size: larger;
     width: 50%;
     margin-left: 25%;
-    border-bottom: 1px solid rgb(0, 0, 0);
+    border-bottom: 3px solid#C37F90;
     padding: .2vw;
+    color: aliceblue;
 }
 
 .editor-container {
     padding: 2%;
+    background-color: #3C4F6D;
+    /* border-left: 3px solid #2b3547; */
+}
+
+.email {
+    color: aliceblue;
+    padding: 3%;
 }
