--- a/frontend/src/components/ManageComponents/ManagerComponents/ProductManager/ProductManager.css
+++ b/frontend/src/components/ManageComponents/ManagerComponents/ProductManager/ProductManager.css
@@ -1,13 +1,18 @@
 .product-manager-list-container {
     width:25%;
-    background-color: rgb(20, 117, 149);
-    height: 100%;
+    height: 48vh;
 }
 
 .table-2 {
     width: 100%;
     font-size: .75vw;
-    height: 35vh;
+    height: 100%
+}
+
+.table-2 button {
+    padding: 25%;
+    font-size: larger;
+    /* margin-right: 20%; */
 }
 
 .bp-cell {
@@ -22,8 +27,7 @@
     width: 45%
 }
 
-.data-2 {
+.nheight {
     height: 100%;
-    background-color: aliceblue;
     overflow-y: scroll;
 }
